--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "1.0.0",
     "@angular/animations": "~11.0.1",
     "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.0.1",
@@ -30,6 +31,7 @@
     "@angular-devkit/build-angular": "~0.1100.2",
     "@angular/cli": "~11.0.2",
     "@angular/compiler-cli": "~11.0.1",
+    "@types/googlemaps": "^3.36.4",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
